--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,33 @@ body{
     position: relative;
     
 }
-.smallRadius{
+
+.miniBrush{
+   
+    height: 5px;
+    width: 5px;
     position: absolute;
     display: inline-block;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-
+     border-radius: 50%;
+}
+.smallBrush{
+    height: 15px;
+    width: 15px;
+    position: absolute;
+    display: inline-block;
+     border-radius: 50%;
+}
+.mediumBrush{
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    display: inline-block;
+     border-radius: 50%;
+}
+.giantBrush{
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    display: inline-block;
+     border-radius: 50%;
 }
