--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,11 @@ body{
     display: inline-block;
      border-radius: 50%;
 }
+.erase{
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    display: inline-block;
+     border-radius: 50%;
+     background-color: white;
+}
